--- a/index.html
+++ b/index.html
@@ -8,5 +8,20 @@
   </head>
   <body>
     <!-- Your code here -->
+     <img 
+         src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+         alt="Lion"
+         title="An image of a lion"
+     >
+     <img 
+         src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+         alt="Lion"
+         title="An image of a lion"
+     >
+     <img 
+         src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+         alt="Lion"
+         title="An image of a lion"
+     >
   </body>
 </html>
